set(SRC
    main.cpp
    App.cpp
    App.h
    Icon.h
    Cursor.h
    WindowBase.cpp
    WindowBase.h
    WindowMain.cpp
    WindowMain.h
    WindowPin.cpp
    WindowPin.h
    Screen.cpp
    Screen.h
    PixelInfo.cpp
    PixelInfo.h
    CutMask.cpp
    CutMask.h
    Recorder.cpp
    Recorder.h
    Util.cpp
    Util.h
    TimerTask.cpp
    TimerTask.h
    Timer.cpp
    Timer.h
    ToolBase.cpp
    ToolBase.h
    ToolBtn.cpp
    ToolBtn.h
    ToolMain.cpp
    ToolMain.h
    ToolSub.cpp
    ToolSub.h
    State.h
)
target_sources(ScreenCapture PRIVATE ${SRC})
add_subdirectory(Shape)