set(SRC
    main.cpp
    App.cpp
    App.h
    State.h
    Icon.h
    Cursor.h
    WindowBase.cpp
    WindowBase.h
    WindowMain.cpp
    WindowMain.h
    WindowPin.cpp
    WindowPin.h
    PixelInfo.cpp
    PixelInfo.h
    CutMask.cpp
    CutMask.h
    Recorder.cpp
    Recorder.h
    ToolBase.cpp
    ToolBase.h
    ToolBtn.cpp
    ToolBtn.h
    ToolMain.cpp
    ToolMain.h
    ToolSub.cpp
    ToolSub.h
    ColorBlender.h
    ColorBlender.cpp
    Lang.h
    Lang.cpp
)
target_sources(ScreenCapture PRIVATE ${SRC})
add_subdirectory(Shape)